<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GigALoanRegistration1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/empty_avatar"
        android:layout_above="@+id/etFirstName"
        android:layout_alignRight="@+id/pass_ver_text"
        android:layout_alignEnd="@+id/pass_ver_text"
        android:layout_gravity="top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_page1_email_text"
        android:id="@+id/username_reg_txt"
        android:layout_above="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reg_page1_fm_text"
        android:layout_alignRight="@+id/pass_text"
        android:layout_alignEnd="@+id/pass_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Image"
        android:id="@+id/bAddImage"
        android:layout_marginBottom="25dp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_alignRight="@+id/bAddImage"
        android:layout_alignEnd="@+id/bAddImage"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:id="@+id/pass_text"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Verify Password"
        android:id="@+id/pass_ver_text"
        android:layout_below="@+id/pass_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_above="@+id/pass_ver_text"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_alignRight="@+id/etEmail"
        android:layout_alignEnd="@+id/etEmail"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etVerifyPassword"
        android:layout_alignBottom="@+id/pass_ver_text"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword"
        android:layout_alignRight="@+id/etPassword"
        android:layout_alignEnd="@+id/etPassword"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Client"
        android:id="@+id/sClient"
        android:layout_toLeftOf="@+id/etVerifyPassword"
        android:layout_toStartOf="@+id/etVerifyPassword"
        android:layout_below="@+id/pass_ver_text"
        android:layout_above="@+id/sStudent"
        android:checked="false" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Student"
        android:id="@+id/sStudent"
        android:checked="false"
        android:layout_alignTop="@+id/bRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/sClient"
        android:layout_alignEnd="@+id/sClient" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fname"
        android:id="@+id/reg_page1_fm_text"
        android:layout_alignBottom="@+id/editText6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_below="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_alignRight="@+id/bAddImage"
        android:layout_alignEnd="@+id/bAddImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_page1_ln_txt"
        android:id="@+id/reg_page2_ln_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/etEmail"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstName"
        android:layout_above="@+id/etEmail"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_alignRight="@+id/etEmail"
        android:layout_alignEnd="@+id/etEmail"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/bRegister"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="cancel"
        android:id="@+id/tvCancel"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/sStudent"
        android:layout_toLeftOf="@+id/bRegister"
        android:layout_toStartOf="@+id/bRegister"
        android:layout_alignTop="@+id/bRegister" />


</RelativeLayout>
